# Photogrammetry

./: .gitignore  LICENSE  README.md  setup.cfg
blender/15pt_star_camera_pan/: project.blend
data/dewarp_test/: stats.json
dotnet_src/: .gitignore  Photogrammetry.sln
dotnet_src/Framework/: BaseOptions.cs  Framework.csproj
dotnet_src/ImageProcessing/: CameraPoseEstimation.cs  DeWarp.cs  ImageProcessing.csproj  ImageStore.cs  KeypointDetection.cs  KeypointMatching.cs  RedundantKeypointEliminator.cs  Utils.cs
dotnet_src/ImageProcessing.Abstractions/: Coordinate.cs  DistortionMatrix.cs  DistortionMatrixV1.cs  ImageProcessing.Abstractions.csproj  ImageVariantKey.cs  Keypoint.cs  KeypointPair.cs
dotnet_src/ImageProcessing.Tests/: ImageProcessing.Tests.csproj  KeypointDetectionTests.cs  UnitTest1.cs
dotnet_src/ImageReader.LocalImageReader/: ImageReader.LocalImageReader.csproj  ImageReaderOptions.cs  LocalImageReader.cs
dotnet_src/Images.Abstractions/: Coordinate.cs  Image.cs  ImageDimensions.cs  Matrix.cs  MatrixDimensions.cs  MatrixStorage.cs  MatrixV1.cs
dotnet_src/Images.Abstractions.Tests/: GrayscaleTests.cs  Images.Abstractions.Tests.csproj
dotnet_src/Photogrammetry/: Photogrammetry.csproj  Program.cs  TestService.cs  appsettings.development.json  appsettings.json
dotnet_src/Properties/: launchSettings.json
dotnet_src/SambaReader/: SambaReader.cs  SambaReaderOptions.cs
notes/: de_warping.md
photogrammetry/clustering/: hierarchical.py
scripts/: cluster_features.py  de_warp.py  detect_features.py  match_keypoints.py  take_img.py  video_server.py
(+75 files in other folders)
