[metadata]
name = photogrammetry
version = 0.0.1
author = Mark Takatsuka
author_email = takatsuka.mark@gmail.com
description = A Python based Photogrammetry solution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Takatsuka-Mark/Photogrammetry
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
